--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "devDependencies": {
     "browser-sync": "^2.26.13",
     "eslint": "7.1.0",
-    "eslint-config-htmlacademy": "0.6.0"
+    "eslint-config-htmlacademy": "0.6.0",
+    "webpack": "5.4.0",
+    "webpack-cli": "4.2.0"
   },
   "license": "MIT",
   "dependencies": {},
   "scripts": {
     "test": "eslint js/",
-    "start": "browser-sync --watch"
+    "start": "browser-sync --watch",
+    "build": "webpack --mode production"
   },
   "engines": {
     "node": "8.11"
